# python-utilities

./: .gitignore  PACKAGING.md  README.md  file_utils.py  news_scraper.py  pyproject.toml  rest_client.py
src/utilities/: __init__.py  amazon_price_tracker.py  video_filename_fixer.py
tests/: test_amazon_price_tracker.py  test_file_utils.py  test_news_scraper.py  test_rest_client.py  test_video_filename_fixer.py
